# rope

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rope.cpp  rope.hpp  test.hpp  todo.md
.cache/clangd/index/: main.cpp.C7E1A286262FD62C.idx  rope.cpp.E7422C4A091D74BE.idx  rope.hpp.7A10573C0CC7F72C.idx
